# ai-fleet

./: CLAUDE.md  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  Makefile  README.md  hello.py  pyproject.toml
.github/workflows/: lint.yml  test.yml
src/aifleet/: __init__.py  cli.py  config.py  state.py  tmux.py  utils.py  worktree.py
src/aifleet/commands/: __init__.py  attach.py  create.py  fanout.py  init.py  kill.py  list.py  logs.py  multi.py  prompt.py
tests/: __init__.py  conftest.py  test_cli.py  test_commands_attach.py  test_commands_kill.py  test_commands_logs.py  test_commands_prompt.py  test_config.py  test_state.py  test_utils.py  test_worktree.py
