[project]
name = "ai-fleet"
version = "0.1.0"
description = "Spin up and command a fleet of AI developer agents from your terminal"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.0",
    "psutil>=5.9.0",
    "toml>=0.10.0",
    "libtmux>=0.37.0",
]

[project.scripts]
fleet = "aifleet.cli:main"
flt = "aifleet.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aifleet"]
