[project]
name = "ai-fleet"
version = "0.1.0"
description = "Spin up and command a fleet of AI developer agents from your terminal"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click>=8.1.0",
    "psutil>=5.9.0",
    "toml>=0.10.0",
    "libtmux>=0.37.0",
]

[project.scripts]
fleet = "aifleet.cli:cli"
flt = "aifleet.cli:flt"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aifleet"]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
]
dev = [
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pyyaml>=6.0.0",
    "lefthook>=1.5.0",
]
update = [
    "requests>=2.28.0",
    "packaging>=21.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "--cov=aifleet",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--verbose",
]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
]
ignore = [
    "UP",   # pyupgrade - disabled to maintain Python 3.9 compatibility
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.uv]
dev-dependencies = [
    "mypy>=1.16.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-mock>=3.14.1",
    "types-toml>=0.10.8.20240310",
    "types-requests>=2.28.0",
    "ruff>=0.11.12",
]
